--- a/libs/external/font-awesome-4.7.0/css/font-awesome.css
+++ b/libs/external/font-awesome-4.7.0/css/font-awesome.css
@@ -627,6 +627,9 @@
 .fa-twitter:before {
   content: "\f099";
 }
+.fa-mastodon:before {
+  content: "\f2e1";
+}
 .fa-facebook-f:before,
 .fa-facebook:before {
   content: "\f09a";
