--- a/libs/external/font-awesome-4.7.0/css/font-awesome.css
+++ b/libs/external/font-awesome-4.7.0/css/font-awesome.css
@@ -628,7 +628,7 @@
   content: "\f099";
 }
 .fa-mastodon:before {
-  content: "\f2e1";
+  content: "\f4f6";
 }
 .fa-facebook-f:before,
 .fa-facebook:before {
